# 202200129_LAB_SO1_2S2025_PROYECTO3

./: Proyecto-3-SOPES.md  README.md  comandos.txt  create_oci_images.sh  deploy_kubernetes.sh  initialize_project.sh  update_image_references.sh
1_zot/: README.md  setup_zot.sh
2_rust_api/: Cargo.toml  Dockerfile  README.md
2_rust_api/k8s/: deployment.yaml
2_rust_api/src/: main.rs
3_go_api/: Dockerfile  README.md  go.mod  main.go
3_go_api/k8s/: deployment.yaml
4_go_kafka_writer/: Dockerfile  README.md  go.mod  main.go
5_go_rabbit_writer/: Dockerfile  README.md  go.mod  main.go
6_go_kafka_consumer/: Dockerfile  README.md  go.mod  main.go
7_go_rabbit_consumer/: Dockerfile  README.md  go.mod  main.go
api-rust/: Cargo.toml  Dockerfile  build.rs
go-services/: go.mod  go.sum
k8s/: README.md  grafana-config.yaml  grafana.yaml  ingress.yaml  kafka-strimzi.yaml  locust.yaml  namespace.yaml  prometheus.yaml  rabbitmq.yaml  valkey.yaml
kubernetes/: api-rust.yaml  consumers.yaml  go-grpc.yaml  ingress.yaml  kafka-cluster.yaml  rabbitmq-cluster.yaml  valkey.yaml
locust/: Dockerfile  locustfile.py
proto/: weather_tweet.proto
proyecto3/: .gitignore  CHECKLIST-EVALUACION.md  EJEMPLOS.md  GRAFANA-SETUP.md  INICIO.sh  PASOS-DESPLIEGUE.md  README.md  RESUMEN.md  SCRIPTS.md  TECNICA.md  build-images.sh  cleanup.sh  deploy.sh  make-executable.sh  monitor.sh  run-grafana.sh  run-locust.sh  run-tests.sh  run-valkey.sh  show-info.sh  update-registry.sh
proyecto3/api-rust/: Cargo.toml  Dockerfile  Dockerfile.simple  build.rs
proyecto3/api-rust/src/: main.rs
(+35 files in other folders)
