[package]
name = "weather-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
prost = "0.12"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "weather_api"
path = "src/main.rs"
